2023-05-23 Worked on storing main Product data Language wise in SW6 product Table and Check Feedback given by BA Team. Worked on Styling issues after reaching the timeout in Internal Back-end Login by OTP plugin

--- a/custom/plugins/ICTECHMigration/composer.json
+++ b/custom/plugins/ICTECHMigration/composer.json
@@ -2,11 +2,15 @@
   "name": "ictech/migration",
   "description": "Core Migration",
   "type": "shopware-platform-plugin",
-  "license": "MIT",
+  "license": "proprietary",
+  "version": "v1.0.0",
   "autoload": {
     "psr-4": {
       "ICTECHMigration\\": "src/"
     }
+  },
+  "require": {
+    "shopware/core": "^6.4 <6.5"
   },
   "extra": {
     "shopware-plugin-class": "ICTECHMigration\\ICTECHMigration",
