--- a/custom/plugins/ICTECHRestockReminder/composer.json
+++ b/custom/plugins/ICTECHRestockReminder/composer.json
@@ -15,9 +15,9 @@
         }
     } ,
     "require" : {
-        "shopware/core" : "^6.4" ,
-        "shopware/storefront" : "^6.4" ,
-        "shopware/administration" : "^6.4"
+        "shopware/core" : "^6.4 <6.5" ,
+        "shopware/storefront" : "^6.4 <6.5" ,
+        "shopware/administration" : "^6.4 <6.5"
     } ,
     "extra" : {
         "shopware-plugin-class" : "ICTECHRestockReminder\\ICTECHRestockReminder" ,
